# diffgeomengine

./: .gitignore  CMakeLists.txt
core/classes/compute/: invert_matrix.hpp  partical_differentiation.hpp  rk4_realize.hpp
core/classes/diff/: ChristoffelSymbols.hpp  Geodesic.hpp  Manifold.hpp  Metric.hpp
core/classes/visual/: MetricGrid.hpp
core/diffgeomeng/classes/compute/: invert_matrix.hpp  partical_differentiation.hpp  rk4_realize.hpp
core/diffgeomeng/classes/diff/: ChristoffelSymbols.hpp  Geodesic.hpp  Manifold.hpp  Metric.hpp
core/diffgeomeng/classes/visual/: MetricGrid.hpp
core/diffgeomeng/utility/: createShaderProgram.hpp  functions.hpp  types.hpp
core/utility/: createShaderProgram.hpp
src/: main.cpp  types.cpp  types.tpp
src/classes/compute/: invert_matrix.cpp  invert_matrix.tpp  partical_differentiation.cpp  partical_differentiation.tpp  rk4_realize.cpp  rk4_realize.tpp
src/classes/diff/: ChristoffelSymbols.cpp  ChristoffelSymbols.tpp  Geodesic.cpp  Geodesic.tpp  Manifold.cpp  Manifold.tpp  Metric.cpp  Metric.tpp
src/classes/visual/: MetricGrid.cpp  MetricGrid.tpp
src/shaders/: vertex_shader.glsl
src/utility/: createShaderProgram.cpp  functions.cpp  functions.tpp
